add ds-lite tllm-gen based disagg test
Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

initial support for helix parallelism

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

fixed mapping tests, added working MLA module test, added disagg test for helix (WIP)

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

Helix MLA module test: added more scenarios, removed unnecessary code

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

MLA Helix test: restricting number of tests, better output

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

test MLA helix: remove OOM test scenario

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

test MLA helix: fix scenario max position embeddings

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

test Helix MLA: try to fix NaNs

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

added all-to-all impl

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

fix thop lib

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

fix alltoall

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

attention MLA: remove kv heads (unused), improve heads naming, fix tests

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

test Helix MLA: minor fixes

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

test Helix MLA: disable numeric test

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

test Helix MLA: add TODOs to MLA module

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

test Helix MLA: fix MLA module

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

debugging

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

debugging

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

debugging

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

debugging

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

debugging

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

debugging

Signed-off-by: Matthias Jouanneaux <mjoux@nvidia.com>

debugging

Signed-off-by: Matthias

--- a/cpp/tensorrt_llm/thop/CMakeLists.txt
+++ b/cpp/tensorrt_llm/thop/CMakeLists.txt
@@ -39,6 +39,7 @@ add_library(
   mlaPreprocessOp.cpp
   allgatherOp.cpp
   allreduceOp.cpp
+  alltoallOp.cpp
   attentionOp.cpp
   causalConv1dOp.cpp
   convertSpecDecodingMaskToPackedMaskOp.cpp
@@ -61,6 +62,7 @@ add_library(
   fusedTopkSoftmax.cpp
   gatherTreeOp.cpp
   groupRmsNormOp.cpp
+  helixPostProcessOp.cpp
   llama4MinLatency.cpp
   logitsBitmaskOp.cpp
   mambaConv1dOp.cpp
