--- a/tests/integration/defs/disaggregated/test_configs/disagg_config_ctxtp2_gentp1cp2_deepseek_v3_lite_fp8_tllm_gen.yaml
+++ b/tests/integration/defs/disaggregated/test_configs/disagg_config_ctxtp2_gentp1cp2_deepseek_v3_lite_fp8_tllm_gen.yaml
@@ -4,11 +4,17 @@ model: DeepSeek-V3-Lite/fp8
 free_gpu_memory_fraction: 0.25
 backend: "pytorch"
 disable_overlap_scheduler: True
-moe_backend: TRTLLM
+cuda_graph_config: null
 context_servers:
   num_instances: 1
+  enable_chunked_prefill: False
+  kv_cache_config:
+    enable_block_reuse: False
+    enable_partial_reuse: False
   tensor_parallel_size: 2
   pipeline_parallel_size: 1
+  cache_transceiver_config:
+    backend: "UCX"
   urls:
       - "localhost:8001"
 generation_servers:
@@ -18,5 +24,11 @@ generation_servers:
   context_parallel_size: 2
   cp_config:
     cp_type: helix
+  enable_chunked_prefill: False
+  kv_cache_config:
+    enable_block_reuse: False
+    enable_partial_reuse: False
+  cache_transceiver_config:
+    backend: "UCX"
   urls:
       - "localhost:8002"
