--- a/tests/integration/defs/disaggregated/test_configs/disagg_config_ctxtp2_gentp1cp2_deepseek_v3_lite_fp8_tllm_gen_128k.yaml
+++ b/tests/integration/defs/disaggregated/test_configs/disagg_config_ctxtp2_gentp1cp2_deepseek_v3_lite_fp8_tllm_gen_128k.yaml
@@ -21,6 +21,7 @@ context_servers:
   pipeline_parallel_size: 1
   cache_transceiver_config:
     backend: "UCX"
+    max_tokens_in_buffer: 128000
   urls:
       - "localhost:8001"
 generation_servers:
@@ -42,5 +43,6 @@ generation_servers:
     enable_partial_reuse: False
   cache_transceiver_config:
     backend: "UCX"
+    max_tokens_in_buffer: 64000
   urls:
       - "localhost:8002"
