--- a/tests/integration/defs/disaggregated/test_configs/disagg_config_ctxtp2_gentp1cp2_deepseek_v3_lite_bf16_tllm_gen.yaml
+++ b/tests/integration/defs/disaggregated/test_configs/disagg_config_ctxtp2_gentp1cp2_deepseek_v3_lite_bf16_tllm_gen.yaml
@@ -1,7 +1,7 @@
 hostname: localhost
 port: 8000
 model: DeepSeek-V3-Lite/bf16
-free_gpu_memory_fraction: 0.25
+free_gpu_memory_fraction: 0.1
 backend: "pytorch"
 disable_overlap_scheduler: True
 cuda_graph_config: null
@@ -15,6 +15,7 @@ context_servers:
   pipeline_parallel_size: 1
   cache_transceiver_config:
     backend: "UCX"
+    max_tokens_in_buffer: 4096
   urls:
       - "localhost:8001"
 generation_servers:
@@ -28,5 +29,6 @@ generation_servers:
     enable_partial_reuse: False
   cache_transceiver_config:
     backend: "UCX"
+    max_tokens_in_buffer: 4096
   urls:
       - "localhost:8002"
