longer prompt for DSV3 Lite & DSR1 FP4 integration test
disaggregated/test_disaggregated.py::test_disaggregated_deepseek_v3_lite_bf16_tllm_gen_helix
disaggregated/test_disaggregated.py::test_disaggregated_deepseek_v3_lite_fp8_tllm_gen_helix
disaggregated/test_disaggregated.py::test_disaggregated_deepseek_r1_fp4_tllm_gen_helix

--- a/tests/integration/defs/disaggregated/test_configs/disagg_config_ctxtp2_gentp1cp2_deepseek_v3_lite_fp8_tllm_gen.yaml
+++ b/tests/integration/defs/disaggregated/test_configs/disagg_config_ctxtp2_gentp1cp2_deepseek_v3_lite_fp8_tllm_gen.yaml
@@ -11,10 +11,13 @@ context_servers:
   kv_cache_config:
     enable_block_reuse: False
     enable_partial_reuse: False
+  moe_config:
+    backend: DEEPGEMM
   tensor_parallel_size: 2
   pipeline_parallel_size: 1
   cache_transceiver_config:
     backend: "UCX"
+    max_tokens_in_buffer: 4096
   urls:
       - "localhost:8001"
 generation_servers:
@@ -30,5 +33,8 @@ generation_servers:
     enable_partial_reuse: False
   cache_transceiver_config:
     backend: "UCX"
+    max_tokens_in_buffer: 4096
+  moe_config:
+    backend: DEEPGEMM
   urls:
       - "localhost:8002"
