--- a/tests/integration/defs/disaggregated/test_configs/disagg_config_ctxtp4_gentp2cp2_deepseek_r1_fp4_tllm_gen_helix.yaml
+++ b/tests/integration/defs/disaggregated/test_configs/disagg_config_ctxtp4_gentp2cp2_deepseek_r1_fp4_tllm_gen_helix.yaml
@@ -1,36 +1,47 @@
 hostname: localhost
 port: 8000
 model: DeepSeek-R1-FP4
-free_gpu_memory_fraction: 0.25
 backend: "pytorch"
 disable_overlap_scheduler: True
 cuda_graph_config: null
 context_servers:
   num_instances: 1
+  tensor_parallel_size: 4
+  pipeline_parallel_size: 1
   enable_chunked_prefill: False
   max_batch_size: 1
-  max_num_tokens: 128000
+  max_num_tokens: 100000
+  max_seq_len: 100000
+  moe_config:
+    backend: "TRTLLM"
   kv_cache_config:
     enable_block_reuse: False
     enable_partial_reuse: False
-  tensor_parallel_size: 4
-  pipeline_parallel_size: 1
+    max_tokens: 100000
+    dtype: "fp8"
   cache_transceiver_config:
     backend: "UCX"
+    max_tokens_in_buffer: 100000
   urls:
       - "localhost:8001"
 generation_servers:
   num_instances: 1
-  tensor_parallel_size: 2
+  tensor_parallel_size: 1
   pipeline_parallel_size: 1
-  context_parallel_size: 2
+  context_parallel_size: 4
   enable_chunked_prefill: False
   max_batch_size: 1
-  max_num_tokens: 64000
+  max_num_tokens: 32
+  max_seq_len: 100000
+  moe_config:
+    backend: "TRTLLM"
   kv_cache_config:
     enable_block_reuse: False
     enable_partial_reuse: False
+    max_tokens: 100000
+    dtype: "fp8"
   cache_transceiver_config:
     backend: "UCX"
+    max_tokens_in_buffer: 100000
   urls:
       - "localhost:8002"
