initial changes for gemma3 integration tests refactor

--- a/tests/integration/defs/accuracy/references/mmmu.yaml
+++ b/tests/integration/defs/accuracy/references/mmmu.yaml
@@ -2,3 +2,5 @@ Qwen/Qwen2-VL-7B-Instruct:
   - accuracy: 48.44
 nvidia/Nano-v2-VLM:
   - accuracy: 43.78
+google/gemma-3-27b-it:
+  - accuracy: 56.10
