--- a/tests/integration/defs/disaggregated/test_configs/disagg_config_ctxtp2_gentp1cp2_deepseek_v3_lite_bf16_tllm_gen.yaml
+++ b/tests/integration/defs/disaggregated/test_configs/disagg_config_ctxtp2_gentp1cp2_deepseek_v3_lite_bf16_tllm_gen.yaml
@@ -11,6 +11,7 @@ context_servers:
   kv_cache_config:
     enable_block_reuse: False
     enable_partial_reuse: False
+    tokens_per_block: 32
   tensor_parallel_size: 2
   pipeline_parallel_size: 1
   cache_transceiver_config:
@@ -23,9 +24,13 @@ generation_servers:
   pipeline_parallel_size: 1
   context_parallel_size: 2
   enable_chunked_prefill: False
+  cp_config:
+    cp_type: HELIX
+    tokens_per_block: 32
   kv_cache_config:
     enable_block_reuse: False
     enable_partial_reuse: False
+    tokens_per_block: 32
   cache_transceiver_config:
     backend: "UCX"
   urls:
