--- a/examples/disaggregated/slurm/benchmark/config.yaml
+++ b/examples/disaggregated/slurm/benchmark/config.yaml
@@ -58,6 +58,10 @@ worker_config:
     enable_attention_dp: true
     enable_lm_head_tp_in_adp: true
     pipeline_parallel_size: 1
+    context_parallel_size: 1
+    cp_config:
+      cp_type: "HELIX"
+      tokens_per_block: 32  # must match kv_config.tokens_per_block.
     max_batch_size: 256
     max_num_tokens: 512
     max_seq_len: 2251
@@ -82,6 +86,7 @@ worker_config:
     trust_remote_code: true
     kv_cache_config:
       enable_block_reuse: false
+      tokens_per_block: 32
       free_gpu_memory_fraction: 0.8
       dtype: fp8
     moe_config:
@@ -102,6 +107,7 @@ worker_config:
     max_num_tokens: 4608
     max_seq_len: 1227
     tensor_parallel_size: 4
+    context_parallel_size: 1
     moe_expert_parallel_size: 4
     enable_attention_dp: true
     pipeline_parallel_size: 1
